service methods should add throw exceptions